    - replaced 'advanced' flag by a generic tagging mechanism
  - File: find(...) now throws an exception, of the file is not found.
  - DPeak and DRichPeak are metafunctions now, e.g. DPeak<1>::Type is a typedef for Peak1D.
  - VersionInfo: Added support for SVN revision info. Slight interface changes.
  - TOPPBase: Print revison info (if meaningful).
  - MetaInfo: uses double precision now.
  - Date: get() now returns a string instead of modifying a string reference
  - DateTime: get(), getDate() and getTime() now return a string instead of modifying a string reference
  - MSExperiment: The date is now a DateTime object

------------------------------------------------------------------------------------------
----                                   OpenMS 1.2                                     ----
------------------------------------------------------------------------------------------

New features and improvements of OpenMS:
- GCC 4.3 is now supported (GCC 3.4 and 4.0 are no longer supported)
- Added support for GCC STL debug mode (configure option --enable-stl-debug)
- Complete reimplementation of map alignment and feature grouping classes.
  This affected some classes in KERNEL and nearly all classes in ANALYSIS/MAPMATCHING.
  The affected classes are not listed in detail here.
- Added meta data arrays to spectra as the new standard way of handing peak meta information
- Improved interface of SpectrumCanvas and derived classes for easier reuse outside of TOPPView
- Added support for arbitrary modifications to peptide/protein modifications (based on PSI-MOD)
- Exceptions thrown by member functions are no longer declared in the header files.
  They are however documented in the class documentation.
- Added *beta* support for the HUPO PSI format mzML
  Currently only reading is supported and some features are not implemented yet
  e.g. chromatograms, zlib compression of base64 data, base64 integer data, base64 16 bit data