@@ -73,8 +73,12 @@ Detailed list of changes to specific OpenMS classes:
   - VersionInfo: Added support for SVN revision info. Slight interface changes.
   - TOPPBase: Print revison info (if meaningful).
   - MetaInfo: uses double precision now.
-  - Date: get() now returns a string instead of modifying a string reference
-  - DateTime: get(), getDate() and getTime() now return a string instead of modifying a string reference
+  - Date
+    - get() now returns a string instead of modifying a string reference
+    - made today() is static now and returns the current DateTime instead of modifying the object
+  - DateTime
+    - get(), getDate() and getTime() now return a string instead of modifying a string reference
+    - made now() is static now and returns the current Date instead of modifying the object
   - MSExperiment: The date is now a DateTime object
 
 ------------------------------------------------------------------------------------------
